--- a/index.html
+++ b/index.html
@@ -300,6 +300,14 @@
                                 <span class="contact-link">Москва, м. Чистые пруды</span>
                             </div>
                         </div>
+                        <div class="contact-item">
+                            <span class="contact-icon"><svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor"><path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6z"/></svg></span>
+                            <div>
+                                <div class="contact-label">Авито</div>
+                                <a href="https://www.avito.ru/ваш-профиль" target="_blank" class="contact-link">Мои услуги на Авито</a>
+                            </div>
+                        </div>
+                        </div>
                     </div>
                 </div>
                 <div class="contacts-form">
