feat: изменить логику записи - клиент выбирает только услугу, админ назначает время

--- a/index.html
+++ b/index.html
@@ -329,29 +329,8 @@
                                 <option value="extension">Наращивание ресниц</option>
                             </select>
                         </div>
-                        <div class="form-row">
-                            <div class="form-group">
-                                <input type="date" name="date" required>
-                            </div>
-                            <div class="form-group">
-                                <select name="time" required>
-                                    <option value="">Время</option>
-                                    <option value="09:00">09:00</option>
-                                    <option value="10:00">10:00</option>
-                                    <option value="11:00">11:00</option>
-                                    <option value="12:00">12:00</option>
-                                    <option value="13:00">13:00</option>
-                                    <option value="14:00">14:00</option>
-                                    <option value="15:00">15:00</option>
-                                    <option value="16:00">16:00</option>
-                                    <option value="17:00">17:00</option>
-                                    <option value="18:00">18:00</option>
-                                    <option value="19:00">19:00</option>
-                                </select>
-                            </div>
-                        </div>
                         <div class="form-group">
-                            <textarea name="message" placeholder="Комментарий" rows="3"></textarea>
+                            <textarea name="message" placeholder="Удобное время для записи (день недели, утро/день/вечер)" rows="2"></textarea>
                         </div>
                         <div class="form-group checkbox-group">
                             <label class="checkbox-label">
