feat: обновить статистику и местоположение (Апатиты)

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="description" content="Профессиональное ламинирование и ботокс ресниц в Москве. Запись на процедуру.">
+    <meta name="description" content="Профессиональное ламинирование и наращивание ресниц в Апатитах. Запись на процедуру.">
     <meta name="theme-color" content="#c9a87c">
-    <title>Lash Master | Ламинирование Ресниц</title>
+    <title>Lash Master | Ламинирование Ресниц в Апатитах</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -44,7 +44,7 @@
         <div class="hero-content">
             <span class="hero-badge">Профессиональный уход за ресницами</span>
             <h1 class="hero-title">Идеальные ресницы — <br><span>ваша уверенность</span></h1>
-            <p class="hero-subtitle">Сертифицированный мастер ламинирования и ботокса ресниц в Москве</p>
+            <p class="hero-subtitle">Сертифицированный мастер ламинирования ресниц в Апатитах</p>
             <a href="#contacts" class="btn btn-primary">Записаться на процедуру</a>
         </div>
         <div class="hero-decoration"></div>
@@ -67,12 +67,12 @@
                     <p class="about-text">Моя цель — создавать безупречный взгляд, который подчеркивает вашу естественную красоту. Каждая процедура выполняется с индивидуальным подходом и вниманием к деталям.</p>
                     <div class="about-stats">
                         <div class="stat">
-                            <span class="stat-number">500+</span>
+                            <span class="stat-number">100+</span>
                             <span class="stat-label">довольных клиентов</span>
                         </div>
                         <div class="stat">
-                            <span class="stat-number">5+</span>
-                            <span class="stat-label">лет опыта</span>
+                            <span class="stat-number">2+</span>
+                            <span class="stat-label">года опыта</span>
                         </div>
                         <div class="stat">
                             <span class="stat-number">100%</span>
@@ -279,7 +279,7 @@
                             <span class="contact-icon"><i class="bi bi-geo-alt"></i></span>
                             <div>
                                 <div class="contact-label">Адрес</div>
-                                <span class="contact-link">Москва, м. Чистые пруды</span>
+                                <span class="contact-link">Апатиты</span>
                             </div>
                         </div>
                         <div class="contact-item">
