--- a/index.html
+++ b/index.html
@@ -288,8 +288,19 @@
                                 <div class="contact-label">Авито</div>
                                 <a href="https://www.avito.ru/ваш-профиль" target="_blank" class="contact-link">Мои услуги на Авито</a>
                             </div>
+                        </div>
                     </div>
-                </div>
+                    <div class="map-container">
+                        <iframe 
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1326.574!2d33.4!3d67.5!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNjnCsDMwJzAwLjAiTiAzMsKwMjQnMDAuMCJF!5e0!3m2!1sru!2s!4v1600000000000!5m2!1sru!2s" 
+                            width="100%" 
+                            height="250" 
+                            style="border:0;" 
+                            allowfullscreen="" 
+                            loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
+                    </div>
                 </div>
                 <div class="contacts-form">
                     <form id="bookingForm" class="form">
