feat: добавить фоновое фото на главный экран

--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@
     </header>
 
     <section class="hero">
+        <div class="hero-bg"></div>
         <div class="hero-content">
             <span class="hero-badge">Профессиональный уход за ресницами</span>
             <h1 class="hero-title">Идеальные ресницы — <br><span>ваша уверенность</span></h1>
             <p class="hero-subtitle">Сертифицированный мастер ламинирования ресниц в Апатитах</p>
             <a href="#contacts" class="btn btn-primary">Записаться на процедуру</a>
         </div>
-        <div class="hero-decoration"></div>
+        <div class="hero-overlay"></div>
     </section>
 
     <section id="about" class="about">
