--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <div class="cookie-banner" id="cookieBanner">
@@ -354,7 +354,7 @@
         <i class="bi bi-arrow-up"></i>
     </a>
 
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
     <script>
     function acceptCookies() {
             localStorage.setItem('cookiesAccepted', 'true');
