--- a/public/terms.html
+++ b/public/terms.html
@@ -30,7 +30,7 @@
         <p>Настоящее пользовательское соглашение (далее — «Соглашение») регулирует отношения между пользователем сайта lash-master.ru и исполнителем услуг.</p>
         
         <h2>1. Предмет соглашения</h2>
-        <p>1.1. Исполнитель предоставляет услуги по ламинированию, ботоксу и наращиванию ресниц, а также ламинированию бровей.</p>
+        <p>1.1. Исполнитель предоставляет услуги по ламинированию, окрашиванию и наращиванию ресниц.</p>
         <p>1.2. Запись на услуги осуществляется через форму на сайте.</p>
         
         <h2>2. Порядок записи и отмены</h2>
